# kev_monitor

./: .gitignore  Cargo.toml  README.md  build-release.sh  clean.sh  install_linux.sh  install_windows.ps1  settings.ini
src/: config.rs  db.rs  kev.rs  main.rs  notify.rs  report.rs
